apps/prowlarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: prowlarr
          ports:
            - containerPort: 9696
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
