apps/prowlarr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  replicas: 1
  serviceName: prowlarr
  selector:
    matchLabels:
      app.kubernetes.io/instance: prowlarr
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: prowlarr
          ports:
            - name: http
              containerPort: 9696
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
            failureThreshold: 180
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
          securityContext:
            capabilities:
              add:
                - CHOWN
                - SETGID
                - SETUID
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: run
          emptyDir:
            medium: Memory
