apps/prowlarr/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
    - name: http
      port: 9696
      targetPort: http
    - name: metrics
      port: 9696
      targetPort: http
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
